Give auto complete a minimum height to prevent jumping of the interface

--- a/core/app/assets/stylesheets/facts/fact_relation_search.css.less
+++ b/core/app/assets/stylesheets/facts/fact_relation_search.css.less
@@ -16,6 +16,7 @@
     overflow: hidden;
     position: relative;
     margin: 0;
+    min-height: 225px;
 
     .fact-relation-post {
       width: 120px;
